# catch2_cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: catch-config.cmake
